# quant-research

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  pyproject.toml  setup_env.sh
.github/workflows/: ci.yml
config/: backtest.yaml  data.yaml
quant_research/: __init__.py  strategies.py  utils.py
quant_research/experiments/: __init__.py  baseline.py  compare_strategies.py  mean_reversion.py  momentum.py  parameter_sweep.py
results/: README.md  experiment_log.csv  metrics_20260420_214554.csv  metrics_20260422_201159.csv
tests/: __init__.py  conftest.py  test_experiments.py
